Fix scrollbar bug

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,4 +1,5 @@
 .about {
+	height: 100vh;
 	padding: 5rem 10rem;
 	.greeting {
 		color: var(--color-accent);
