--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,6 +2,10 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	position: sticky;
+	background-color: var(--color-background-body);
+	top: 0;
+	z-index: 100;
 	width: 100%;
 	border-bottom: 1px solid var(--color-border);
 	padding: 10px 50px;
