--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,5 +69,5 @@ body,
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 }
